# sango_chan_rs

./: .gitignore  Cargo.toml  README.md  config_example.toml
src/: config.rs  handler.rs  main.rs  misskey.rs  savedata.rs  websocket.rs
src/handler/: followed.rs  mention.rs  note.rs
src/misskey/: following.rs  notes.rs  users.rs
