# SPDX-FileCopyrightText: NONE
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "sango_chan"
version = "0.1.0"
authors = ["SyoBoN <syobon@syobon.net>"]
edition = "2024"
repository = "https://github.com/syobocat/sango_chan_rs"
license = "UPL-1.0"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[dependencies]
anyhow = "1.0.100"
cfspeedtest = "1.4.1"
chrono = { version = "0.4.42", default-features = false, features = ["alloc", "std", "now", "clock"] }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "charset", "http2", "json", "rustls-tls", "system-proxy"] }
rustls = { version = "0.23.35", default-features = false, features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
toml = "0.9.8"
